# contract-question-agent

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
docs/: data.md  mcp.md
src/contract_question_agent/: __init__.py  cli_generate_questions.py  cuad_downloader.py  cuad_loader.py  reflection_metadata.py  safety.py  schemas.py  tracing.py
src/contract_question_agent/api/: __init__.py  adapter.py  ag_ui_adapter.py  ag_ui_schemas.py  app.py  schemas.py
src/contract_question_agent/clause_hints/: __init__.py  catalog.py  schemas.py
src/contract_question_agent/mcp/: __init__.py  server.py
src/contract_question_agent/model_client/: __init__.py  openrouter.py
src/contract_question_agent/prompts/: __init__.py  reflection_system.j2  verification_question_system.j2
src/contract_question_agent/skills/: __init__.py  loader.py
src/contract_question_agent/skills/contract_verification_questions/: __init__.py  skill.md
src/contract_question_agent/workflows/: __init__.py  microsoft_linear_workflow.py  nodes.py  tracing.py  workflow.py
src/contract_question_agent/workflows/nodes/: __init__.py  filter_records.py  generate_minimal_questions.py  is_in_scope.py  load_clause_spans.py  reflect_against_skill_thesis.py  safety_check.py  write_output.py
tests/: conftest.py  test_ag_ui.py  test_api.py  test_clause_hints.py  test_cuad_downloader.py  test_cuad_loader.py  test_docs.py  test_generate_questions_cli.py  test_mcp_server.py  test_microsoft_linear_workflow.py  test_openrouter_client.py  test_safety.py  test_schemas.py  test_skill_loader.py  test_streamlit_viewer.py  test_tracing.py  test_workflow.py
viewer/: __init__.py  sse_client.py  streamlit_app.py
