[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "contract-question-agent"
version = "0.1.0"
description = "Data layer for a contract verification-question generator using the CUAD dataset."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "contract-question-agent contributors" }]
dependencies = [
    "agent-framework-core>=1.3.0",
    "agent-framework-openai>=1.3.0",
    "jinja2>=3.1.6",
    "langchain>=1.2.18",
    "langfuse>=4.6.1",
    "langgraph>=1.1.10",
    "pydantic>=2",
    "python-dotenv>=1.2.2",
]

[project.scripts]
cuad-loader = "contract_question_agent.cuad_loader:main"
cuad-downloader = "contract_question_agent.cuad_downloader:main"
contract-question-generate = "contract_question_agent.cli_generate_questions:main"

[dependency-groups]
dev = ["pytest>=7"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
contract_question_agent = ["prompts/*.j2"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
